# programming_languages

./: .gitignore  1_Hello_World.md  2_Hello_User.md  3_Unit_Test_Demo.md  4_Numbers.md  5_Words.md  README.md  run.text
ada/: Ada_Readme.md  Unit_Test_Readme.md
ada/hellouser/: hellouser.adb
ada/helloworld/: helloworld.adb
ada/numbers/: alire.toml  numbers.gpr  test.gpr
ada/words/: CMakeLists.txt  Makefile  alire.toml  execute.ab  execute.bat  execute.ps1  execute.sh  test.gpr  words.gpr
assembly/: Assembler_Readme.md
assembly-script/helloworld/: index.html  init.sh  package-lock.json  package.json  run.js
assembly/hellouser/: hello_user.asm
assembly/helloworld/: hello_world.asm
assembly/numbers/: numbers_iterative.asm  numbers_recursive.asm  run_tests.asm
assembly/words/: CmakeLists.txt  Makefile  execute.bat  execute.ps1  execute.sh
ballerina/hellouser/: hello_user.bal
ballerina/numbers/: Ballerina.toml  Dependencies.toml  init.sh
ballerina/words/: Ballerina.toml  Dependencies.toml  initialize.ab  initialize.bat  initialize.ps1  initialize.sh
c/: Unit_Test_Readme.md
c#/hellouser/: Program.cs
c#/helloworld/: Program.cs
c#/numbers/: initialize.sh  numbers.sln
c#/words/: WordsSolution.sln  execute.sh  initialize.sh
c++/numbers/: BUILD  MODULE.bazel
c++/numbers/src/implementations/: numbers_iterative.cpp
c++/numbers/src/interfaces/: numbers_iterative.h  numbers_recursive.h
c++/numbers/test/: numbers_recursive_test.cpp
c++/words/: BUILD  CMakeLists.txt  Makefile  execute.ab  execute.bat  execute.ps1  execute.sh
c/archivos/: #archivos.c#  archivos.c
c/cadenas/: cadenas.c
c/circulo_struct/: circulo.c
c/expreg_args/: #regexp.c#  regexpexample.c~  validacion.c~
c/figuras/: circulo.c
c/helloconsole/: Hello  Hello.c
c/hellouser/: hellouser.c
c/helloworld/: Hello  Hello.c  helloworld.c
c/numbers/: meson.build
c/numbers/src/: meson.build
c/numbers/src/implementations/: numbers_iterative.c  numbers_recursive.c
c/numbers/src/interfaces/: numbers_iterative.h  numbers_recursive.h
c/numbers/test/: meson.build  run_tests.c
c/numbers/test/suites/: test_numbers_iterative.c  test_numbers_recursive.c
c/strings/: cadenas  strings.c  strings.c~
c/words/: CMakeLists.txt  Makefile  execute.ab  execute.bat  execute.ps1  meson.build
c/words/test/: meson.build  numerical_test.c  run_tests.c  words_test.c
claire/hellouser/: hello_user.cl
claire/helloworld/: hello_world.cl
clojure/: Unit_Test_Readme.md
clojure/cadenas/: cadenas.clj  cadenas.clj~
clojure/helloconsole/: helloconsole.clj
clojure/hellouser/: hellouser.clj
clojure/helloworld/: helloworld.clj
clojure/numbers/: deps.edn  project.clj
clojure/words/: deps.edn  project.clj
cobol/: Unit_Test_Readme.md
cobol/hellouser/: hellouser.cbl
cobol/helloworld/: helloworld.cbl
cobol/numbers/: Factorial.cbl  Fibonacci.cbl  Makefile  RunTests.cbl  SumNumbers.cbl
common-lisp/: Common_Lisp_Readme.md  Unit_Test_Readme.md
common-lisp/hellouser/: hello_user.lisp
common-lisp/helloworld/: hello_world.lisp
cpp/: Unit_Test_Readme.md
cpp/circulo_clase/: circulo.cpp
cpp/expreg_args/: Expreg.cpp
cpp/helloconsole/: Hello  Hello.cpp  Hello.cpp~
cpp/hellouser/: hellouser.cpp
cpp/helloworld/: Hello  Hello.cpp  Hello.cpp~  HelloWorld.cpp
cpp/strings/: cadenas  cadenas.cpp  cadenas.cpp~
cpp/unit_testing/: CBasicMath.cpp  CBasicMath.hpp  TestBasicMath.cpp
crystal/: Unit_Test_Readme.md
crystal/cadenas/: cadenas.cr
crystal/helloconsole/: helloconsole.cr  helloconsole.cr~
crystal/hellouser/: hellouser.cr
crystal/helloworld/: helloworld.cr
crystal/numbers/: shard.yml
crystal/words/: shard.yml
d/: Unit_Test_Readme.md
d/cadenas/: cadenas.d
d/helloconsole/: helloconsole.d
d/helloworld/: helloworld.d
d/numbers/: .gitignore  dub.sdl
d/words/: .gitignore  dub.sdl
dart/: Unit_Test_Readme.md
dart/hellouser/: hellouser.dart
dart/helloworld/: helloworld.dart
dart/numbers/: pubspec.yaml
dart/words/: pubspec.yaml
elixir/: Unit_Tes_Readme.md
elixir/cadenas/: cadenas.exs
elixir/helloconsole/: helloconsole.exs
elixir/hellouser/: hellouser.exs
elixir/helloworld/: helloworld.exs
elixir/numbers/: mix.exs
elixir/unit_test/: .gitignore  README.md  mix.exs
elixir/words/: mix.exs
elm/hellouser/: elm.json
elm/numbers/: elm.json
elm/words/: elm.json
erlang/: Unit_Test_Readme.md
erlang/cadenas/: cadenas.beam  cadenas.erl  cadenas.erl~  erl_crash.dump
erlang/helloconsole/: helloconsole.erl
erlang/hellouser/: hellouser.erl
erlang/helloworld/: helloworld.erl
erlang/numbers/: README.md  rebar.config
erlang/words/: README.md
f#/: Unit_Test_Readme.md
f#/hellouser/: hellouser.fs
f#/helloworld/: helloworld.fs
f#/words/: Words.sln
forth/: Unit_Test_Readme.md
forth/hellouser/: hello_user.forth
forth/helloworld/: hello_world.forth
fortran/: Unit_Test_Readme.md
fortran/hellouser/: hello_user.f90
fortran/helloworld/: hello_world.f90
fortran/numbers/: Makefile
fs/: Unit_Test_Readme.md
go/: Go_Readme.md
grain/: Grain_Readme.md
groovy/: Groovy_Readme.md
haskell/words/: CHANGELOG.md  LICENSE  wordsy.cabal
haskell/words/lib/: Numerical.hs  Wordsy.hs
haskell/words/test/: Main.hs  NumericalTest.hs  WordsyTest.hs
java/: Java_Readme.md
purescript/: Unit_Test_Readme.md
r/: Unit_Test_Readme.md
raku/: Raku_Readme.md
rescript/: Unit_Test_Readme.md
ruby/: Unit_Test_Readme.md
rust/: Unit_Test_Readme.md
scala/: Unit_Test_Readme.md
scheme/: Unit_Test_Readme.md
swift/: Unit_Test_Readme.md
typescript/: Unit_Test_Readme.md
v/: V_Readme.md
vala/: Unit_Test_Readme.md
vala/numbers/src/: meson.build  numbers_iterative.vala  numbers_recursive.vala
vala/numbers/test/: meson.build  numbers_iterative_test.vala  numbers_recursive_test.vala  run_tests.vala
vala/words/src/: meson.build  numerical.vala  words.vala
vala/words/test/: meson.build  numerical_test.vala  run_tests.vala  words_test.vala
xsb/: Unit_Test_Readme.md
yorick/: Unit_Test_Readme.md
zig/: Unit_Test_Readme.md
(+939 files in other folders)
