# MODULE.bazel (preferred for newer Bazel versions)
bazel_dep(name = "googletest", version = "1.15.2") # Use the desired version

# WORKSPACE (for older Bazel versions)
# load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
# http_archive(
#     name = "com_google_googletest",
#     sha256 = "...", # Replace with the correct SHA256 for your chosen version
#     strip_prefix = "googletest-...", # Adjust prefix based on the archive
#     urls = ["https://github.com/google/googletest/archive/refs/tags/release-1.15.2.tar.gz"], # Use the correct URL
# )