cabal-version:      3.4
name:               wordsy
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             yorche
maintainer:         hyaoki123@gmail.com
-- copyright:
category:           Testing
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib Numerical Wordsy
    -- other-modules:
    -- other-extensions:
    build-depends:    
            base ^>=4.18.3.0,
            array
    hs-source-dirs:   lib
    default-language: Haskell2010

test-suite wordsy-test
    import:           warnings
    default-language: Haskell2010
    other-modules:    NumericalTest WordsyTest
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.3.0,
        HUnit,
        wordsy
