# Build recursive implementation object
recursive_lib = static_library('numbers_recursive',
  ['implementations/numbers_recursive.c'],
  include_directories : include_directories('.'),
)

# Build iterative implementation object
iterative_lib = static_library('numbers_iterative',
  ['implementations/numbers_iterative.c'],
  include_directories : include_directories('.'),
)